# pico-sdk

./: .bazelignore  .bazelrc  .gitmodules  MODULE.bazel  REPO.bazel
bazel/config/: BUILD.bazel
bazel/constraint/: BUILD.bazel
bazel/toolchain/: BUILD.bazel
src/common/pico_base_headers/: BUILD.bazel
src/rp2040/pico_platform/: BUILD.bazel
src/rp2350/pico_platform/: BUILD.bazel
src/rp2_common/hardware_timer/: timer.c
src/rp2_common/pico_crt0/: BUILD.bazel
src/rp2_common/pico_lwip/: lwip.BUILD
src/rp2_common/pico_malloc/: BUILD.bazel
src/rp2_common/pico_multicore/: multicore.c
src/rp2_common/pico_multicore/include/pico/: multicore.h
